# ams

./: .gitignore  AGENTS.md.template  Cargo.toml  LICENSE-APACHE  README.md  install.sh
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
crates/ams-cli/: Cargo.toml
crates/ams-cli/assets/: AMS.md
crates/ams-cli/src/: format.rs  init.rs  main.rs  update.rs
crates/ams-core/: Cargo.toml
crates/ams-core/src/: index.rs  lib.rs  model.rs
crates/ams-core/src/parser/: csharp.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  typescript.rs
crates/ams-core/tests/: parser_csharp.rs  parser_java.rs  parser_kotlin.rs  parser_ruby.rs  parser_typescript.rs  parsers.rs
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  pre-bash.sh  pre-grep.sh  pre-read.sh  session-start.sh
plugin/skills/ams/: SKILL.md
