[workspace]
resolver = "2"
members = ["crates/ams-core", "crates/ams-cli"]

[workspace.package]
version = "0.11.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/StMalina/ams"
description = "AI Module Signatures — compact code index for AI agents: signatures with exact line spans instead of full file reads"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-php = "0.23"
