[package]
name = "ams-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
ignore.workspace = true
rusqlite.workspace = true
serde.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-php.workspace = true
