[package]
name = "ams-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
ignore.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-php.workspace = true
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1.1"
# =0.23.1: 0.23.5 ships grammar ABI 15, incompatible with tree-sitter 0.24
# (LanguageError at runtime); cargo install ignores Cargo.lock, so pin here.
tree-sitter-c-sharp = "=0.23.1"
tree-sitter-ruby = "0.23"
